# playground

./: .gitignore  XOR_modified_model.py  adl_q3.py  custom_linear.py  hello.py  model.pt  model.py  pyproject.toml
A1/: Lecture_2_PyTorch_XOR.ipynb  XOR_model.py  adl_q2.py  adl_q7.py  q3_model.pt  viz
A2/: ADL_HW_2_CBOW.ipynb  WordVectors_and_Skip_Gram.ipynb
A3/: ADL_HW_3A_MLP_Text_Classification.ipynb  ADL_HW_3B_CNN_Digit_Classification.ipynb
A5/: HW 5 - MLP Language Model updated-2.ipynb  pyproject.toml
