[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchdata>=0.11.0",
    "torchsummary>=1.5.1",
    "torchtext>=0.18.0",
    "torchviz>=0.0.3",
]

[tool.uv.workspace]
members = ["A5"]
